short timeseries tuples explanation

--- a/word_timeseries.ipynb
+++ b/word_timeseries.ipynb
@@ -27,7 +27,7 @@
       "import json\n",
       "words_ts = []\n",
       "words_stats = []\n",
-      "with codecs.open('ngrams/all_ts', encoding='utf-8') as f:\n",
+      "with codecs.open('data/all_ts', encoding='utf-8') as f:\n",
       "    for line in f:\n",
       "        m = re.match(r'\\\"([\\w\\\\]+)\\\"\\s([\\[\\]\\w\\s\\,]+)', line)\n",
       "        if m:\n",
@@ -39,7 +39,7 @@
       "            time_tuples = map(tuple, value[3])\n",
       "            #Create List of (Word, total count, average count, maximum) tuples\n",
       "            words_stats.append( (key, total, float(total)/num_years, maximum) )\n",
-      "            #Create list (Word, timeseries tuples)\n",
+      "            #Create list (Word, list((year, count))\n",
       "            words_ts.append( (key, time_tuples) )\n",
       "        else:\n",
       "            print \"no match\", line"
@@ -47,7 +47,34 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": 105
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Example words_ts entry:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "words_ts[7864]\n",
+      "# Word      List of (year, count) tuples"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 111,
+       "text": [
+        "(u'chion', [(1951, 1), (1978, 1)])"
+       ]
+      }
+     ],
+     "prompt_number": 111
     },
     {
      "cell_type": "markdown",
